--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-baseURL: "https://pascalmichaillat.org/hugo-website/" 
-title: Moritz-Maria von Igelfeld
+baseURL: "https://sayanghosh.github.io" 
+title: Sayan Ghosh
 theme: PaperMod
 
 enableInlineShortcodes: true
